// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="ControlledInputField"
  data-test-id="cf-ui-radio-button-field"
>
  <div
    class="RadioButton ControlledInputField__input"
  >
    <input
      aria-label="radio button field"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="radio-button"
      type="radio"
      value=""
    />
    <label
      class="Input__ghost RadioButton__ghost"
      for="radio-button"
    />
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="radio-button"
    >
      radio button field
    </label>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-radio-button-field"
>
  <div
    class="RadioButton ControlledInputField__input"
  >
    <input
      aria-label="radio button field"
      class="ControlledInput"
      data-test-id="cf-ui-controlled-input"
      id="radio-button"
      type="radio"
      value=""
    />
    <label
      class="Input__ghost RadioButton__ghost"
      for="radio-button"
    />
  </div>
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="radio-button"
    >
      radio button field
    </label>
  </div>
</div>
`;
